// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainSidebarDrawerButton should match, full snapshot 1`] = `
<TouchableOpacity
  accessibilityHint="Opens the channels and teams drawer"
  accessibilityLabel="Channels and teams"
  accessibilityRole="button"
  accessible={true}
  onPress={[Function]}
  style={
    {
      "width": 10,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 10,
        },
      ]
    }
    testID="main_sidebar_drawer.button"
  >
    <View>
      <View
        style={
          {
            "height": 25,
          }
        }
      />
    </View>
  </View>
</TouchableOpacity>
`;

exports[`MainSidebarDrawerButton should match, full snapshot 2`] = `
<TouchableOpacity
  accessibilityHint="Opens the channels and teams drawer"
  accessibilityLabel="Channels and teams"
  accessibilityRole="button"
  accessible={true}
  onPress={[Function]}
  style={
    {
      "width": 55,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "paddingHorizontal": 10,
        },
      ]
    }
    testID="main_sidebar_drawer.button"
  >
    <View>
      <CompassIcon
        color="#ffffff"
        name="menu-variant"
        size={24}
      />
      <Badge
        containerStyle={
          {
            "borderColor": "#192a4d",
            "borderRadius": 14,
            "borderWidth": 2,
            "position": "absolute",
            "right": -9,
            "top": -6,
          }
        }
        count={1}
        countStyle={
          {
            "color": "#1e325c",
            "fontSize": 10,
            "fontWeight": "bold",
          }
        }
        extraPaddingHorizontal={10}
        minHeight={20}
        minWidth={18}
        onPress={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "height": 18,
            "padding": 3,
          }
        }
        testID="main_sidebar_drawer.button.badge"
      />
    </View>
  </View>
</TouchableOpacity>
`;
